--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,13 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.4.8"
+axum = "0.6"
 base64 = "0.13.1"
 image = "0.23.14"
 qrcode = "0.12.0"
 serde = {version = "1.0.193", features = ["derive"]}
+shuttle-axum = "0.35.1"
+shuttle-runtime = "0.35.1"
 tokio = {version = "1.35.1", features = ["full"]}
 tracing = "0.1.40"
 tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
